Despliegue de app citas y creacion del registrar e iniciar

--- a/Templates/abogados/abogados.html
+++ b/Templates/abogados/abogados.html
@@ -13,6 +13,7 @@
         <p>{{abogado.nombre}}</p>
         <p>{{abogado.apellido}}</p>
         <p>{{abogado.especialidad}}</p>
+        <a href="">Agendar cita</a>
     {% endfor %}
     
 </body>
