--- a/Templates/abogados/crear_abogados.html
+++ b/Templates/abogados/crear_abogados.html
@@ -1,8 +1,13 @@
 <h1>Crear Abogado</h1>
 
-<form action="" method="post">
+<form method="post">
     {% csrf_token %}
-    {{form.as_p}}
+    <label for="">Nombre del abogado</label>
+    <input type="text" name="nombre">
+    <label for="">Apellidos del abogado</label>
+    <input type="text" name="apellido" id="">
+    <label for="">Especialidad</label>
+    <input type="text" name="especialidad">
     <button>
         Guardar
     </button>
