--- a/Templates/registrarse.html
+++ b/Templates/registrarse.html
@@ -10,7 +10,12 @@
 
     <form method="post">
         {% csrf_token %}
-        {{form.as_p}}
+        <label for="">Nombre de usuario</label>
+        <input type="text" name="nombre" id="">
+        <label for="">Contraseña</label>
+        <input type="password" name="pass1">
+        <label for="">Confirmacion de contraseña</label>
+        <input type="password" name="pass2">
         <button>Registrarse</button>
     </form>
 </body>
