--- a/Templates/iniciar_sesion.html
+++ b/Templates/iniciar_sesion.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Iniciar Sesion</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+<h1>Iniciar Sesion</h1>
 
     <form method="post">
         {% csrf_token %}
@@ -16,5 +11,4 @@
         <input type="password" name="pass" id="">
         <button>Entrar</button>
     </form>
-</body>
-</html>
+{% endblock %}
