--- a/Templates/registrarse.html
+++ b/Templates/registrarse.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Registro</h1>
 
     <form method="post">
@@ -18,5 +13,4 @@
         <input type="password" name="pass2">
         <button>Registrarse</button>
     </form>
-</body>
-</html>
+{% endblock %}
